Responses to comments part 2.